# Messenger

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: ci.yml
lib/: CMakeLists.txt
src/client/: CMakeLists.txt  Main.qml  client.cpp  client.h
src/server/: CMakeLists.txt  server.cpp  server.h
